	1737 Ixion's_Wings		When attackingm chance to gain 7% ASPD for 7 seconds. Occurance raises with refine rate..
	1541 Nemesis			When attacking, chance to gain ATK + 50 for 20 seconds, chance to increase damage against demon and dark element monsters by 10%.
	13034 Desert_Twilight		Small chance to activate max Attack Speed for 7 seconds.

=======================
10/19
	* Updated some new cards for testing purposes [Playtester]
	* Fixed some typos and updated Atroce Card [Playtester]
10/18
	* Updated Gorynych's DEF/MDEF [Playtester]
	* Fixed Ahlspiess not ignoring def of bosses [Playtester]
	* Added knockback to Crimson Fire Formation [Playtester]
10/16
	* Fixed used levels of NPC_CRITICALWOUND [Playtester]
10/15
	* Reverted arrow crafting as there's no evidence that it really has been changed [Playtester]
	* Rev. 11489 Readded Sonic Acceleration to the skill DB. -_- [L0ne_W0lf]
	* Fixed duration of Enchant Deadly Poison [Playtester]
	* Reverted last fix according to tests on Aegis [Playtester]
	* Fixed aftercast delay and timer of Venom Splasher [Playtester]
10/14
	* Rev. 11477 Eek, made it so the Memory of Wedding item only works if you're married. [L0ne_W0lf]
	* Rev. 11476 Added information pertaining to "Enlarge Weight Limit R." [L0ne_W0lf]
	* Rev. 11475 Item Database updates. [L0ne_W0lf]
	- Updated Memory of Wedding effect, and some item names.
	- Added the Diablos item set information.
	- Added cast-delay reduction to Diablos Robe.
10/13
	* Fixed duration of NPC_POWERUP [Playtester]
10/12
	* Rev. 11437 Corrected pet tames for newest pets. [L0ne_W0lf]
	* Fixed up various skills that are supposed to use aMotion as delay [Playtester]
10/11
	* Removed exp of poring stat mobs [Playtester]
	- updated Moscovia mob stats
	- updated sql files
	* Added secret bonus of slotted Skull Ring [Playtester]
	* Rev. 11411 Added all out-standing monsters to the Monster Database. (Poring stats) [L0ne_W0lf]
	- Added Several G_-type monsters. (Events?) as well as WoE:SE monsters.