@@ -3,6 +3,11 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/10/20
+	* Some more updates to the skill unit code [Playtester]
+	- renamed SKILLUNITTIMER_INVERVAL to SKILLUNITTIMER_INTERVAL
+	- Heat now depends on the interval settings rather than firewall_hits_on_undead
+	- Icewall doesn't break anymore when the SKILLUNITTIMER_INTERVAL gets changed
 2007/10/19
 	* Added bonusautoscript and bonusautoscript2. These are used to attach a
 	  script to a player which gets executed on attack (or when attacked). This
